# sb1-71wqu6x6

./: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
backend/: client.py  pyproject.toml  server_deb  start_client.sh  start_server.sh  test_client.py
backend/client/: cli.py  config.py  config.yaml  credentials.py
backend/server/: main.py
backend/server/app/: __init__.py
backend/server/app/api/v1/: dummy.py  endpoints.py  models.py
backend/server/app/core/: config.py  constants.py
backend/server/app/db/: memory.py
src/: App.tsx  main.tsx
src/components/: cta-section.tsx  features-section.tsx  footer.tsx  header.tsx  hero-section.tsx  pricing-section.tsx  shadow-ai-section.tsx  workflow-section.tsx
src/components/auth/: AuthModal.tsx
src/components/dashboard/: AIActivity.tsx  Agent.tsx  Config.tsx  Integrations.tsx  Overview.tsx  Settings.tsx  Subscription.tsx  TeamMembers.tsx
src/components/ui/: button.tsx
src/contexts/: AuthContext.tsx
src/pages/: CookiePolicy.tsx  Dashboard.tsx  LandingPage.tsx  NotFound.tsx  PrivacyPolicy.tsx  TermsOfService.tsx
